--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -60,12 +60,18 @@ jobs:
         run: npm run build
       - name: Deploy
         run: echo Deploying...
-  healthcheck:   
+  healthcheck:
+    needs: build   
     runs-on: ubuntu-latest   
     outputs:   
       id: healthcheck_output   
     steps:   
-      - name: Set execute permissions for the script   
+      - name: Set execute permissions for the script
+        uses: appleboy/ssh-action@master   
+        with:   
+          host: ${{ secrets.VPS_HOST }}   
+          username: ${{ secrets.VPS_USERNAME }}   
+          password: ${{ secrets.VPS_PASSWORD }}         
         run: chmod +x ./scripts/healthcheck-script.sh 
 
       - name: Run Healthcheck 
