--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -65,15 +65,7 @@ jobs:
     outputs:   
       id: healthcheck_output   
     steps:   
-      - name: Set execute permissions for the script
-        uses: appleboy/ssh-action@master   
-        with:   
-          host: ${{ secrets.VPS_HOST }}   
-          username: ${{ secrets.VPS_USERNAME }}   
-          password: ${{ secrets.VPS_PASSWORD }}         
-          script: |
-            chmod +x ./scripts/healthcheck-script.sh 
-
+      
       - name: Run Healthcheck 
         id: healthcheck_status 
         uses: appleboy/ssh-action@master   
@@ -81,7 +73,8 @@ jobs:
           host: ${{ secrets.VPS_HOST }}   
           username: ${{ secrets.VPS_USERNAME }}   
           password: ${{ secrets.VPS_PASSWORD }}   
-          script: |
+          inlineScript: |
+            chmod +x ./scripts/healthcheck-script.sh
             ./scripts/healthcheck-script.sh $SERVER_PORT $HEALTHCHECK_PATH
             if [ $? -eq 0 ]; then
               echo "status=success" >> $GITHUB_ENV
