--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -80,7 +80,7 @@ jobs:
 
             for attempt in $(seq "$retries"); do
               # http_status=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:$SERVER_PORT$HEALTHCHECK_PATH)
-              http_status=$(cat $RESULT_PASS)
+              http_status=$(cat ${{ RESULT_PASS }})
               
               if [ "$http_status" -eq 200 ]; then
                 echo "The service has been successfully raised"
