--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -2,9 +2,10 @@ name: Deploy React App
 on:
   push:
     branches:
-      - 'master'
+      - master
     paths:
-      - '.github/workflows/template_healthcheck.yml'    
+      - .github/workflows/template_healthcheck.yml
+
 
 jobs:
   test:
