--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
       - master
-    paths:
-      - .github/workflows/template_healthcheck.yml
+    # paths:
+    #   - .github/workflows/template_healthcheck.yml
 
 
 jobs:
