--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -61,50 +61,43 @@ jobs:
       - name: Deploy
         run: echo Deploying...
 
-  healthcheck:    
-    uses: ./.github/workflows/template_healthcheck.yml
-    with:
+  
+  healthcheck: 
+    runs-on: ubuntu-latest
+    env:
       RESULT_PATH: /root/http
-    secrets:
-      VPS_HOST: ${{ secrets.VPS_HOST }}
-      VPS_USERNAME: ${{ secrets.VPS_USERNAME }}
-      VPS_PASSWORD: ${{ secrets.VPS_PASSWORD }}
-        
-  # healthcheck: 
-  #   runs-on: ubuntu-latest
-  #   # env:
-  #   #   RESULT_PASS: /root/http   
-  #   outputs:   
-  #     id: healthcheck_output
-  #   steps:   
-  #     - name: Run Healthcheck 
-  #       id: healthcheck_status 
-  #       uses: appleboy/ssh-action@master   
-  #       with:
-  #         host: ${{ secrets.VPS_HOST }}   
-  #         username: ${{ secrets.VPS_USERNAME }}   
-  #         password: ${{ secrets.VPS_PASSWORD }}   
-  #         script: |
-  #           retries=3
-  #           delay_seconds=20
+      TXT_PATH: /root/txt   
+    outputs:   
+      id: healthcheck_output
+    steps:   
+      - name: Run Healthcheck 
+        id: healthcheck_status 
+        uses: appleboy/ssh-action@master   
+        with:
+          host: ${{ secrets.VPS_HOST }}   
+          username: ${{ secrets.VPS_USERNAME }}   
+          password: ${{ secrets.VPS_PASSWORD }}   
+          script: |
+            retries=3
+            delay_seconds=20
 
-  #           for attempt in $(seq "$retries"); do
-  #             # http_status=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:$SERVER_PORT$HEALTHCHECK_PATH)
-  #             http_status=$(cat /root/http)
+            for attempt in $(seq "$retries"); do
+              http_status=$(cat /root/http)
+              echo "ok" > $TXT_PATH
               
-  #             if [ "$http_status" -eq 200 ]; then
-  #               echo "The service has been successfully raised"
-  #               echo "status=success" >> $GITHUB_ENV
-  #               exit 0
-  #             else
-  #               echo "Error: Service not available (attempt $attempt/$retries)"
-  #             fi
+              if [ "$http_status" -eq 200 ]; then
+                echo "The service has been successfully raised"
+                echo "status=success" >> $GITHUB_ENV
+                exit 0
+              else
+                echo "Error: Service not available (attempt $attempt/$retries)"
+              fi
 
-  #             if [ "$attempt" -lt "$retries" ]; then
-  #               sleep "$delay_seconds"
-  #             fi
-  #           done
+              if [ "$attempt" -lt "$retries" ]; then
+                sleep "$delay_seconds"
+              fi
+            done
 
-  #           echo "Error: Service could not be raised"
-  #           echo "status=failure" >> $GITHUB_ENV
-  #           exit 1
+            echo "Error: Service could not be raised"
+            echo "status=failure" >> $GITHUB_ENV
+            exit 1
