--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RESULT_PATH: /root/http
-      TXT_PATH: /root/txt   
+      TXT_PATH: /txt   
     outputs:   
       id: healthcheck_output
     steps:   
@@ -83,7 +83,7 @@ jobs:
 
             for attempt in $(seq "$retries"); do
               http_status=$(cat /root/http)
-              echo "ok" > $TXT_PATH
+              echo "ok" > /root/$TXT_PATH
               
               if [ "$http_status" -eq 200 ]; then
                 echo "The service has been successfully raised"
