--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -83,7 +83,7 @@ jobs:
 
             for attempt in $(seq "$retries"); do
               http_status=$(cat /root/http)
-              echo "ok" > /root/$TXT_PATH
+              echo "ok" > /root$TXT_PATH
               
               if [ "$http_status" -eq 200 ]; then
                 echo "The service has been successfully raised"
