--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RESULT_PATH: /root/http
-      TXT_PATH: /txt   
+      TXT_PATH: /root
     outputs:   
       id: healthcheck_output
     steps:   
