--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -83,7 +83,7 @@ jobs:
 
             for attempt in $(seq "$retries"); do
               http_status=$(cat /root/http)
-              echo $TXT_PATH
+              echo "$TXT_PATH"
               
               if [ "$http_status" -eq 200 ]; then
                 echo "The service has been successfully raised"
@@ -101,3 +101,9 @@ jobs:
             echo "Error: Service could not be raised"
             echo "status=failure" >> $GITHUB_ENV
             exit 1
+
+            # if [ $? -eq 0 ]; then
+            #   echo "status=success" >> $GITHUB_ENV
+            # else
+            #   echo "status=failure" >> $GITHUB_ENV
+            # fi
