--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -86,7 +86,7 @@ jobs:
               
               if [ "$http_status" -eq 200 ]; then
                 echo "The service has been successfully raised"
-                echo -e "status=success" >> $GITHUB_ENV
+                echo -e "status=success" >> "$GITHUB_ENV"
                 exit 0
               else
                 echo "Error: Service not available (attempt $attempt/$retries)"
@@ -98,7 +98,7 @@ jobs:
             done
 
             echo "Error: Service could not be raised"
-            echo -e "status=failure" >> $GITHUB_ENV
+            echo -e "status=failure" >> "$GITHUB_ENV"
             exit 1
 
             # if [ $? -eq 0 ]; then
