--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -66,7 +66,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RESULT_PATH: /root/http
-      TXT_PATH: /root/txt
     outputs:   
       id: healthcheck_output
     steps:   
@@ -86,7 +85,7 @@ jobs:
               
               if [ "$http_status" -eq 200 ]; then
                 echo "The service has been successfully raised"
-                echo "success" >> "$GITHUB_ENV"
+                echo "status=success" >> "$GITHUB_ENV"
                 exit 0
               else
                 echo "Error: Service not available (attempt $attempt/$retries)"
@@ -98,7 +97,7 @@ jobs:
             done
 
             echo "Error: Service could not be raised"
-            echo "failure" >> "$GITHUB_ENV"
+            echo "status=failure" >> "$GITHUB_ENV"
             exit 1
 
             # if [ $? -eq 0 ]; then
